--- a/package.json
+++ b/package.json
@@ -15,18 +15,27 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-preset-stage-0": "^6.3.13",
+    "bootstrap": "^4.1.0",
+    "css-loader": "^0.28.11",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "html-webpack-plugin": "^2.30.1",
     "jquery": "^3.3.1",
     "lodash": "^4.17.10",
+    "node-sass": "^4.9.0",
+    "postcss-loader": "^2.1.4",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
-    "webpack": "^3.10.0",
-    "typescript": "^2.5.3",
+    "sass-loader": "^7.0.1",
+    "style-loader": "^0.21.0",
     "ts-loader": "^3.3.1",
+    "typescript": "^2.5.3",
+    "webpack": "^3.10.0",
     "webpack-dev-server": "^1.14.1"
   },
   "devDependencies": {
     "@types/react": "^16.0.18",
     "@types/react-dom": "^16.0.1",
+    "source-map-loader": "^0.2.3",
     "webpack-cli": "^2.0.15"
   },
   "scripts": {
